--- a/custom_components/cityhome_intercom/manifest.json
+++ b/custom_components/cityhome_intercom/manifest.json
@@ -3,7 +3,7 @@
   "name": "Домофон Город Телеком (CityHome)",
   "documentation": "https://github.com/krassalexs/ha-cityhome-intercom",
   "issue_tracker": "https://github.com/krassalexs/ha-cityhome-intercom/issues",
-  "codeowners": ["@krassalex"],
+  "codeowners": ["@krassalexs"],
   "requirements": ["transliterate", "aiohttp>=3.9.3"],
   "iot_class": "cloud_push",
   "config_flow": true,
